[package]
name = "my_blockchain"
version = "0.1.0"
edition = "2021"
description = "A simple blockchain implementation with REST API"
authors = ["Your Name"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
sha2 = "0.10"
ed25519-dalek = "2.0"
rand = "0.8"
hex = "0.4"
bs58 = "0.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Web framework
actix-web = "4.3"
actix-cors = "0.6"

# Logging
log = "0.4"
env_logger = "0.10"

# Utilities
uuid = { version = "1.3", features = ["v4", "serde"] }
dashmap = "5.4"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.28", features = ["full"] }
libp2p = { version = "0.52", features = [
    "tcp",
    "dns",
    "websocket",
    "noise",
    "yamux",
    "gossipsub",
    "mdns",
    "kad",
] }
futures = "0.3"
async-trait = "0.1"
sled = "0.34"

# API Documentation
utoipa = { version = "3.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1", features = ["actix-web"] }
